# aoc2023

./: .gitignore  Cargo.toml  README.md
01/: main.rs
02/: main.rs
03/: main.rs
04/: main.rs
05/: main.rs
06/: main.rs
07/: main.rs
08/: main.rs
09/: main.rs
10/: main.rs
11/: main.rs
12/: main.rs
13/: main.rs
14/: main.rs
15/: main.rs
16/: main.rs
17/: main.rs
18/: main.rs
19/: main.rs
20/: main.rs
21/: main.rs
22/: main.rs
23/: main.rs
24/: main.rs  plot.py
25/: main.rs
