[package]
name = "aoc2023"
edition = "2021"

[[bin]]
name = "day08"
path = "08/main.rs"

[dependencies]
regex = "1.10.2"

[[bin]]
name = "day09"
path = "09/main.rs"

[[bin]]
name = "day10"
path = "10/main.rs"

[[bin]]
name = "day11"
path = "11/main.rs"

[[bin]]
name = "day12"
path = "12/main.rs"

[[bin]]
name = "day13"
path = "13/main.rs"

[[bin]]
name = "day14"
path = "14/main.rs"

[[bin]]
name = "day15"
path = "15/main.rs"

[[bin]]
name = "day16"
path = "16/main.rs"

[[bin]]
name = "day17"
path = "17/main.rs"

[[bin]]
name = "day18"
path = "18/main.rs"

[[bin]]
name = "day19"
path = "19/main.rs"

[[bin]]
name = "day20"
path = "20/main.rs"
